# Aegis-Assistant

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  alembic.ini  app.py  backup.py  build_bundle.py  convert_pdf.py  docker-compose.gpu.yml  docker-compose.yml  generate_secrets.py  generate_signing_keypair.py  install.py  install_local.py  migrate_qdrant_to_server.py  prometheus.yml  pyproject.toml  restore.py  rollback.py  run_ingest.py  run_query.py  run_store_migrate.py  seed_local_users.py  sign_bundle.py  update.py
.github/: release.trivyignore
alembic/: env.py
docs/: TV_L_tables.json
eval/: ab_embedding.py  ab_extraction.py  eval_aggregation.py  eval_report.py  eval_store.py  gen_gold.py  golden_set.jsonl  ingest_variant_b.py  run_eval.py  seed_progression_rule.py  table_ab.py  table_gold.jsonl  test_05_2.py  test_acl.py
keys/: update_signing_pubkey.pem
nginx/: nginx.conf
rag/: composition.py  config.py  convert_pdf.py  healthcheck.py  models.py
tests/: conftest.py  test_ab_embedding.py  test_ab_extraction.py  test_admin_audit_router.py  test_admin_rbac_flow.py  test_admin_rbac_router.py  test_admin_users_router.py  test_answerability.py  test_api_deps.py  test_api_errors.py  test_api_metrics.py  test_audit_events.py  test_auth_router.py  test_backup_archive.py  test_backup_capture.py  test_backup_cli.py  test_backup_retention.py  test_bootstrap_env_writer.py  test_bootstrap_first_admin.py  test_bootstrap_glitchtip_db.py  test_bootstrap_prereqs.py  test_bootstrap_secrets_gen.py  test_bootstrap_tls_cert.py  test_bootstrap_wait_for_neo4j.py  (+72 more)
(+219 files in other folders)
