[project]
name = "capstone"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "docling>=2.107.0",
    "fastembed>=0.8.0",
    "flagembedding>=1.4.0",
    "gradio>=6.19.0",
    "langchain-core>=1.4.8",
    "langchain-google-vertexai>=3.2.4",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.6",
    "neo4j>=6.2.0",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "ragas==0.2.12",
]
