[project]
name = "capstone"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "argon2-cffi>=25.1.0",
    "celery>=5.4",
    "cryptography>=49.0.0",
    "docling>=2.107.0",
    "fastapi>=0.138.2",
    "fastembed>=0.8.0",
    "flagembedding>=1.4.0",
    "gradio>=6.19.0",
    "langchain-core>=1.4.8",
    "langchain-google-vertexai>=3.2.4",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.6",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "neo4j>=6.2.0",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "pyjwt[crypto]>=2.13.0",
    "psutil>=7.0",
    "pyotp>=2.10.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "qrcode[pil]>=8.2",
    "ragas==0.2.12",
    "redis>=5.0",
    "sqlalchemy>=2.0.51",
    "structlog",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "fakeredis>=2.0",
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]
